--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-bouncy-checkbox": "^4.1.2"
+    "react-native-bouncy-checkbox": "^4.1.2",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-reanimated": "^3.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
